# max32660

./: Cargo.toml  LICENSE.md  README.md  device.x  generate.sh
src/: dma.rs  fcr.rs  flc.rs  gcr.rs  gpio0.rs  i2c0.rs  icc.rs  lib.rs  pwrseq.rs  rtc.rs  sir.rs  spi0.rs  spi1.rs  tmr0.rs  uart0.rs  wdt0.rs
src/dma/: ch.rs  int_en.rs  int_fl.rs
src/fcr/: reg0.rs
src/flc/: actrl.rs  addr.rs  clkdiv.rs  ctrl.rs  data.rs  intr.rs
src/gcr/: clk_ctrl.rs  evten.rs  mem_ctrl.rs  mem_zctrl.rs  pclk_dis0.rs  pclk_dis1.rs  pm.rs  rev.rs  rst0.rs  rst1.rs  scon.rs  sys_ie.rs  sys_stat.rs
src/gpio0/: ds0.rs  ds1.rs  en0.rs  en0_clr.rs  en0_set.rs  en1.rs  en1_clr.rs  en1_set.rs  en2.rs  en2_clr.rs  en2_set.rs  in_.rs  int_clr.rs  int_dual_edge.rs  int_en.rs  int_en_clr.rs  int_en_set.rs  int_mode.rs  int_pol.rs  int_stat.rs  is.rs  out.rs  out_clr.rs  out_en.rs  out_en_clr.rs  out_en_set.rs  out_set.rs  pad_cfg.rs  ps.rs  sr.rs  wake_en.rs  wake_en_clr.rs  wake_en_set.rs
src/i2c0/: clkhi.rs  clklo.rs  ctrl0.rs  dma.rs  fifo.rs  fifolen.rs  hs_clk.rs  inten0.rs  inten1.rs  intfl0.rs  intfl1.rs  mstr_mode.rs  rxctrl0.rs  rxctrl1.rs  sladdr.rs  status.rs  timeout.rs  txctrl0.rs  txctrl1.rs
src/icc/: cache_ctrl.rs  cache_id.rs  invalidate.rs  mem_size.rs
src/pwrseq/: lp_ctrl.rs  lp_wakefl.rs  lpmemsd.rs  lpwk_en.rs
src/rtc/: ctrl.rs  oscctrl.rs  ras.rs  rssa.rs  sec.rs  ssec.rs  trim.rs
src/sir/: addr.rs  status.rs
src/spi0/: clk_cfg.rs  ctrl0.rs  ctrl1.rs  ctrl2.rs  data.rs  dma.rs  int_en.rs  int_fl.rs  ss_time.rs  stat.rs  wake_en.rs  (+1 more)
svd/: MAX32660.xml
(+32 files in other folders)
