[package]
name = "max32660"
edition = "2021"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Register mappings for the Analog Devices MAX32660 Cortex-M4 microcontroller"
documentation = "https://docs.rs/max32660"
repository = "https://github.com/TomCrypto/max32660"
license = "MIT"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "max32660", "svd2rust"]
exclude = [".vscode/*", "svd/*", "generate.sh"]

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.3"

[dependencies.critical-section]
optional = true
version = "1.0"

[dependencies.vcell]
version = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
